--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 
 
-<div class="white-text-container background-image-container" style="background-image: url(./assets/images/imgpool.jpg);">
+<div class="white-text-container background-image-container" style="background-image: url(imgpool.jpg);">
     <div class="opacity"></div>
     <div class="container">
         <div class="row white-bknd">
