--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 
 
-<div class="white-text-container background-image-container" style="background-image: url(imgpool.jpg);">
+<div class="white-text-container background-image-container" style="background-image: url(./assets/images/imgpool.jpg);">
     <div class="opacity"></div>
     <div class="container">
         <div class="row white-bknd">
@@ -87,7 +87,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-4 text-center">
+                <div class="col-md-4 text-center mobile-space">
                     <div class="fa-container">
                         <i class="fa fa-comment-o fa-3x" aria-hidden="true"></i>
                     </div>
@@ -102,7 +102,7 @@
                         <a href="#" title="" class="btn btn-primary btn-lg btn-clr">Learn More!</a>
                     </div>
                 </div>
-                <div class="col-md-4 text-center">
+                <div class="col-md-4 text-center mobile-space">
                     <div class="fa-container">
                         <i class="fa fa-heart-o fa-3x" aria-hidden="true"></i>
                     </div>
@@ -117,7 +117,7 @@
                         <a href="#" title="" class="btn btn-primary btn-lg btn-clr">Learn More!</a>
                     </div>
                 </div>
-                <div class="col-md-4 text-center">
+                <div class="col-md-4 text-center mobile-space">
                     <div class="fa-container">
                         <i class="fa fa-bell-o fa-3x" aria-hidden="true"></i>
                     </div>
@@ -241,12 +241,12 @@
     <div class="section-container footer-container">
         <div class="container">
             <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-4 mobile-space-f">
                         <h4>About us</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sit amet consectetur dolor</p>
                     </div>
 
-                    <div class="col-md-4 text-center">
+                    <div class="col-md-4 text-center mobile-space-f">
                         <h4>Do you like? Share this!</h4>
                         <p>
                             <a href="https://facebook.com/" class="social-round-icon white-round-icon fa-icon" title="">
@@ -262,7 +262,7 @@
                         <p><small>© 2019 AG Pool Service. All Rights Reserved.</small></p>    
                     </div>
 
-                    <div class="col-md-4">
+                    <div class="col-md-4 mobile-space-f">
                         <h4>Subscribe to newsletter</h4>
                         
                         <div class="form-group">
